# Cane-AI-Incident-Response-Platform

./: .gitignore  README.md
my-app/: .gitignore  docker-compose.yml
my-app/backend/: .env.example  alembic.ini  pyproject.toml
my-app/backend/alembic/: env.py
my-app/backend/app/: config.py  dependencies.py  exceptions.py  main.py  middleware.py
my-app/backend/app/ai/: azure_openai_provider.py  claude_provider.py  openai_provider.py  provider_base.py  provider_factory.py
my-app/backend/app/ai/prompts/: playbook_match.py  triage.py
my-app/backend/app/api/: actions.py  auth.py  dashboard.py  incidents.py  integrations.py  logs.py  playbooks.py  router.py  triage.py  users.py
my-app/backend/app/data/: seed_playbooks.py
my-app/backend/app/integrations/: base_client.py  microsoft_defender.py  microsoft_graph.py  microsoft_sentinel.py  registry.py  threat_intel.py
my-app/backend/app/models/: __init__.py  action.py  audit.py  base.py  incident.py  integration.py  log_event.py  playbook.py  triage.py  user.py
my-app/backend/app/schemas/: action.py  auth.py  dashboard.py  incident.py  integration.py  log_event.py  playbook.py  triage.py  user.py
my-app/backend/app/services/: action_service.py  auth_service.py  correlation.py  encryption_service.py  enrichment_service.py  integration_service.py  log_ingestion.py  log_normalizer.py  playbook_service.py  triage_service.py
my-app/backend/app/workers/: celery_app.py  triage_tasks.py
my-app/backend/scripts/: ingest_synthetic_logs.py
my-app/frontend/: index.html  package-lock.json  package.json  (+1 more)
(+28 files in other folders)
